corrección del nombre del salon

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <p class="info-title">La Ceremonia & Fiesta</p>
             <p class="info-detail">Sábado 25 de Abril, 18:00 Horas</p>
             <p style="margin-top: 30px;" class="info-title">Lugar</p>
-            <p class="info-detail">Salón La Soraida, San José</p>
+            <p class="info-detail">Salón Zoraida, San José</p>
             <button class="btn-action btn-custom-color" style="margin-top: 20px;" onclick="window.open('https://maps.app.goo.gl/EHvMi54DAYjbLKjp7')">
                 Cómo llegar
             </button>
