se agregan detalles esteticos para la invitacion al momento de enviarla
Added Open Graph meta tags for better sharing.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invitación - Camila y Franco</title>
+    <meta property="og:title" content="Invitación: Camila & Franco">
+    <meta property="og:description" content="Acompañanos a celebrar nuestra boda el 25 de abril de 2026.">
+    <meta property="og:image" content="https://lucasmaquiavelo.github.io/invitacion-boda/fondo-pareja.jpg">
+    <meta property="og:url" content="https://lucasmaquiavelo.github.io/invitacion-boda/">
+    <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,400&family=Montserrat:wght@200;300;400;600&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -235,4 +240,5 @@
         timer();
     </script>
 </body>
+
 </html>
