--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Invitación - Camila y Franco</title>
     <meta property="og:title" content="Invitación: Camila & Franco">
     <meta property="og:description" content="Acompañanos a celebrar nuestra boda el 25 de abril de 2026.">
-    <meta property="og:image" content="https://lucasmaquiavelo.github.io/invitacion-boda/fondo-pareja.jpg">
+    <meta property="og:image" content="https://lucasmaquiavelo.github.io/invitacion-boda/foto3.jpeg">
     <meta property="og:url" content="https://lucasmaquiavelo.github.io/invitacion-boda/">
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,400&family=Montserrat:wght@200;300;400;600&display=swap" rel="stylesheet">
@@ -242,3 +242,4 @@
 </body>
 
 </html>
+
